--- a/musica.html
+++ b/musica.html
@@ -9,16 +9,16 @@
 </head>
 <body>
     <header>
-        <h1 id="ajax">Professor Ajax</h1>
+        <img src="./imagens/logoajax.png" width="100">
         <hr>
         <nav>
             <a href="./index.html">Home |</a>
-            <a href="./musica.html">Músicas |</a>
+            <a href="./musica.html">Músicas para estudar |</a>
             <a href="./aulas.html">Aulas |</a>
             <a href="./contato.html">Contato</a>
         </nav>
     </header>
-
+    <hr>
     <main>
 
     </main>
