finalização pagina de músicas

--- a/musica.html
+++ b/musica.html
@@ -20,6 +20,13 @@
     </header>
     <hr>
     <main>
+        <h3>Algumas músicas para usar enquanto estiver estudando programação:</h3>
+        <hr>
+        <audio src="./musicasEstudo/classiclife.mp3" controls></audio> <br> <strong>indicação clássica.</strong>
+        <hr>
+        <audio src="./musicasEstudo/classicbrave.mp3" controls></audio> <br> <strong>Mais uma indicação clássica.</strong>
+        <hr>
+        <audio src="./musicasEstudo/lofi.mp3" controls></audio> <br> <strong>Um Lo-fi extremamente aconchegante.</strong>
 
     </main>
 
