finalizando página aulas

--- a/aulas.html
+++ b/aulas.html
@@ -20,6 +20,17 @@
     </header>
     <hr>
     <main>
+        <h2>Iniciando em Python:</h2>
+        <iframe width="400" height="400" src="https://www.youtube.com/embed/dn4CIVr3bpM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <hr>
+        <h2>Iniciando em C#:</h2>
+        <iframe width="400" height="400" src="https://www.youtube.com/embed/BTZiov3ti0s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <hr>
+        <h2>Iniciando em Java:</h2>
+        <iframe width="400" height="400" src="https://www.youtube.com/embed/6nRQCFhBNY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <hr>
+        <h2>Iniciando em R:</h2>
+        <iframe width="400" height="400" src="https://www.youtube.com/embed/mRlncrX94xQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </main>
 
