página de contato finalizada

--- a/contato.html
+++ b/contato.html
@@ -20,7 +20,18 @@
     </header>
     <hr>
     <main>
-
+        
+        <form action="get">
+            <fieldset>
+            <legend>Entre em contato comigo.</legend>
+            Nome: <input type="text" name="nome"> <br> <br>
+            E-mail: <input type="text"> <br> <br>
+            Mensagem: <br>
+            <textarea name="msg" id="" cols="40" rows="5"></textarea> <br>
+            <input type="button" value="Enviar">
+            </fieldset>
+        </form>
+    
     </main>
 
     <footer>
