required em contato

--- a/contato.html
+++ b/contato.html
@@ -24,11 +24,11 @@
         <form action="get">
             <fieldset>
             <legend>Entre em contato comigo.</legend>
-            Nome: <input type="text" name="nome"> <br> <br>
-            E-mail: <input type="text"> <br> <br>
+            Nome: <input type="text" name="nome" required> <br> <br>
+            E-mail: <input type="text" required> <br> <br>
             Mensagem: <br>
-            <textarea name="msg" id="" cols="40" rows="5"></textarea> <br>
-            <input type="button" value="Enviar">
+            <textarea name="msg" id="" cols="40" rows="5" required></textarea> <br>
+            <input type="submit" value="Enviar">
             </fieldset>
         </form>
     
