--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="./imagens/logoajax.png" width="100">
+        <img src="./imagens/logoajax.png" width="100" alt="Logotípo não carregado">
         <hr>
         <nav>
             <a href="./index.html">Home |</a>
