--- a/aulas.html
+++ b/aulas.html
@@ -8,34 +8,34 @@
     <title>Aulas</title>
 </head>
 <body>
-    <header>
-        <img src="./imagens/logoajax.png" width="100" alt="Logotípo não carregado">
-        <hr>
-        <nav>
-            <a href="./index.html">Home |</a>
-            <a href="./musica.html">Músicas para estudar |</a>
-            <a href="./aulas.html">Aulas |</a>
-            <a href="./contato.html">Contato</a>
+    <header class="cabecalho">
+        <img class="logo" src="./imagens/logoajax.png" width="100" alt="Logotípo não carregado">
+        <nav class="menu">
+            <a class="itemMenu" href="./index.html">Home </a>
+            <a class="itemMenu" href="./musica.html">Músicas para estudar </a>
+            <a class="itemMenu" href="./aulas.html">Aulas </a>
+            <a class="itemMenu" href="./contato.html">Contato</a>
         </nav>
     </header>
-    <hr>
-    <main>
-        <h2>Iniciando em Python:</h2>
-        <iframe width="400" height="400" src="https://www.youtube.com/embed/dn4CIVr3bpM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <hr>
-        <h2>Iniciando em C#:</h2>
-        <iframe width="400" height="400" src="https://www.youtube.com/embed/BTZiov3ti0s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <hr>
-        <h2>Iniciando em Java:</h2>
-        <iframe width="400" height="400" src="https://www.youtube.com/embed/6nRQCFhBNY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <hr>
-        <h2>Iniciando em R:</h2>
-        <iframe width="400" height="400" src="https://www.youtube.com/embed/mRlncrX94xQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+    
+    <main class="conteudo">
+        <section class="conteudoPrincipal">
+            <h2 class="titulosAula">Iniciando em Python:</h2>
+            <iframe width="400" height="400" src="https://www.youtube.com/embed/dn4CIVr3bpM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <hr width="100%">
+            <h2 class="titulosAula">Iniciando em C#:</h2>
+            <iframe width="400" height="400" src="https://www.youtube.com/embed/BTZiov3ti0s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <hr width="100%">
+            <h2 class="titulosAula">Iniciando em Java:</h2>
+            <iframe width="400" height="400" src="https://www.youtube.com/embed/6nRQCFhBNY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <hr width="100%">
+            <h2 class="titulosAula">Iniciando em R:</h2>
+            <iframe width="400" height="400" src="https://www.youtube.com/embed/mRlncrX94xQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </section>
     </main>
 
     <footer>
-        <hr>
+        <hr width="100%">
         <small>&copy;Criado por Miguel Carraro - 2022</small>
     </footer>
 </body>
