--- a/contato.html
+++ b/contato.html
@@ -8,34 +8,33 @@
     <title>Contato</title>
 </head>
 <body>
-    <header>
-        <img src="./imagens/logoajax.png" width="100" alt="Logotípo não carregado">
-        <hr>
-        <nav>
-            <a href="./index.html">Home |</a>
-            <a href="./musica.html">Músicas para estudar |</a>
-            <a href="./aulas.html">Aulas |</a>
-            <a href="./contato.html">Contato</a>
+    <header class="cabecalho">
+        <img class="logo" src="./imagens/logoajax.png" width="100" alt="Logotípo não carregado">
+        <nav class="menu">
+            <a class="itemMenu" href="./index.html">Home </a>
+            <a class="itemMenu" href="./musica.html">Músicas para estudar </a>
+            <a class="itemMenu" href="./aulas.html">Aulas </a>
+            <a class="itemMenu" href="./contato.html">Contato</a>
         </nav>
     </header>
-    <hr>
-    <main>
-        
-        <form action="get">
-            <fieldset>
-            <legend>Entre em contato comigo.</legend>
-            Nome: <input type="text" name="nome" required> <br> <br>
-            E-mail: <input type="text" required> <br> <br>
-            Mensagem: <br>
-            <textarea name="msg" id="" cols="40" rows="5" required></textarea> <br>
-            <input type="submit" value="Enviar">
-            </fieldset>
-        </form>
     
+    <main class="conteudoContato">
+        <section class="conteudoPrincipal">
+            <form class="formulario" action="get">
+                <fieldset>
+                <legend><strong>Entre em contato comigo.</strong></legend>
+                Nome: <input type="text" name="nome" required> <br> <br>
+                E-mail: <input type="text" required> <br> <br>
+                Mensagem: <br>
+                <textarea name="msg" id="" cols="40" rows="5" required></textarea> <br>
+                <input type="submit" value="Enviar">
+                </fieldset>
+            </form>
+        </section>
     </main>
 
     <footer>
-        <hr>
+        <hr width="100%">
         <small>&copy;Criado por Miguel Carraro - 2022</small>
     </footer>
 </body>
