--- a/aulas.html
+++ b/aulas.html
@@ -21,16 +21,16 @@
     <main class="conteudo">
         <section class="conteudoPrincipal">
             <h2 class="titulosAula">Iniciando em Python:</h2>
-            <iframe width="400" height="400" src="https://www.youtube.com/embed/dn4CIVr3bpM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="50%" height="400" src="https://www.youtube.com/embed/dn4CIVr3bpM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <hr width="100%">
             <h2 class="titulosAula">Iniciando em C#:</h2>
-            <iframe width="400" height="400" src="https://www.youtube.com/embed/BTZiov3ti0s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="50%" height="400" src="https://www.youtube.com/embed/BTZiov3ti0s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <hr width="100%">
             <h2 class="titulosAula">Iniciando em Java:</h2>
-            <iframe width="400" height="400" src="https://www.youtube.com/embed/6nRQCFhBNY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="50%" height="400" src="https://www.youtube.com/embed/6nRQCFhBNY0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <hr width="100%">
             <h2 class="titulosAula">Iniciando em R:</h2>
-            <iframe width="400" height="400" src="https://www.youtube.com/embed/mRlncrX94xQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="50%" height="400" src="https://www.youtube.com/embed/mRlncrX94xQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
     </main>
 
